# easycache

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
projet_test/: Cargo.toml
projet_test/src/: main.rs
src/: easycache.rs  lib.rs  lru_cache.rs  rustycache.rs
src/strategy/: fifo.rs  lfu.rs  lru.rs  mod.rs
tests/: fifo_tests.rs  lfu_tests.rs  lru_cache_test.rs  lru_tests.rs
